--- a/rps/index.html
+++ b/rps/index.html
@@ -2,17 +2,22 @@
 <html>
     <head>
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="./style.css">
         <script type="text/javascript" src="game.js"></script>
         <script type="text/javascript" src="round.js"></script>
         <script type="text/javascript" src="controller.js"></script>
 
     </head>
     <body>
-        <h2>Want to play Rock Paper Scissors?</h2>
-        <p>Good! Cause you are in the right place.</p>
-        <p>
-            To play, just open your console by hitting F12 and then from the
-            console type "playGame()"" and hit enter.
-        </p>
+        <div class="container">
+            <h2>Want to play Rock Paper Scissors?</h2>
+            <p>Good! Cause you are in the right place.</p>
+            <p>
+                To play, just open your console by hitting F12 if you are using Windows or Fn+F12 if using MacOs and then from the
+                console type "playGame()"" and hit enter.
+            </p>
+        </div>
+
+        <script src="./script.js"></script>
     </body>
 </html>
